--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-removed.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-removed.adoc
@@ -1,7 +1,7 @@
 // Removed Variables between oCIS 4.0.0 and oCIS 5.0.0
 // commenting the headline to make it better includable
 
-// table created based on the .md file per 2024.02.07
+// table created based on the .md file per 2024.02.12
 // the table should be recreated/updated based on the final .md file
 
 [width="100%",cols="~,~,~,~",options="header"]
@@ -43,4 +43,13 @@
 | `OCIS_LDAP_USER_SCHEMA_ID_IS_OCTETSTRING`
 | Set this to true if the defined 'ID' attribute for users is of the 'OCTETSTRING' syntax. This is e.g. required when using the 'objectGUID' attribute of Active Directory for the user ID's.
 
+| xref:{s-path}/web.adoc[web]
+| `WEB_OPTION_IMPRINT_URL`
+| To be configured via the `theme.json` file
+| Specifies the target URL for the imprint link valid for the ocis instance in the account menu.
+
+|
+| `WEB_OPTION_PRIVACY_URL`
+| To be configured via the `theme.json` file
+| Specifies the target URL for the privacy link valid for the ocis instance in the account menu.
 |===
